--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,7 @@ button[type="submit"]:hover{
     display: flex;
     flex-direction: column;
     align-items: center;
+    border-radius: 10px;
 }
 
 h1{
@@ -53,12 +54,20 @@ p{
     margin: 5px 0px;
 }
 
-.cityDisplay,.tempDisplay{
+.cityDisplay, .tempDisplay{
     font-size: 3.5rem;
     font-weight: bold;
     color: rgba(0, 0, 0, 0.75);
     margin-bottom: 25px;
 }
+
+.timeDisplay{
+    font-size: 2rem;
+    font-weight: bold;
+    color: rgba(0, 0, 0, 0.7);
+    margin-bottom: 15px;
+}
+
 .humidityDisplay{
     font-weight: bold;
     margin-bottom: 25px;
@@ -69,10 +78,12 @@ p{
     font-weight: bold;
     font-size: 2rem;
 }
+
 .weatherEmoji{
     margin: 0px;
     font-size: 7.5rem;
 }
+
 .errorDisplay{
     font-size: 2.5rem;
     font-weight: bold;
