--- a/styles.css
+++ b/styles.css
@@ -34,57 +34,69 @@ button[type="submit"]:hover{
 }
 
 .card{
-    background: linear-gradient(180deg,rgb(164, 164, 228),rgb(241, 191, 96));
+    background: linear-gradient(180deg, rgb(133, 133, 191), rgb(231, 181, 86));
     padding: 50px;
-    box-shadow: 2px 2px 5px black;
-    min-width: 300px;
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
+    min-width: 350px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    border-radius: 10px;
+    border-radius: 15px;
+    text-align: center;
+    color: #333;
 }
 
 h1{
     margin-top: 0px;
-    margin-bottom: 25px;
+    margin-bottom: 15px;
+    font-size: 2.5rem;
+    color: #222;
 }
 
 p{
     font-size: 1.5rem;
-    margin: 5px 0px;
+    margin: 8px 0px;
 }
 
-.cityDisplay, .tempDisplay{
-    font-size: 3.5rem;
+.cityDisplay{
+    font-size: 3rem;
     font-weight: bold;
-    color: rgba(0, 0, 0, 0.75);
-    margin-bottom: 25px;
+    color: #000;
 }
 
 .timeDisplay{
+    font-size: 1.8rem;
+    font-weight: bold;
+    color: rgba(0, 0, 0, 0.8);
+    margin-bottom: 15px;
+}
+
+.tempDisplay{
     font-size: 2rem;
     font-weight: bold;
-    color: rgba(0, 0, 0, 0.7);
-    margin-bottom: 15px;
+    color: #ff5733;
 }
 
 .humidityDisplay{
     font-weight: bold;
-    margin-bottom: 25px;
+    margin-bottom: 20px;
+    font-size: 1.8rem;
 }
 
 .descDisplay{
     font-style: italic;
     font-weight: bold;
     font-size: 2rem;
+    color: #555;
 }
 
 .weatherEmoji{
-    margin: 0px;
-    font-size: 7.5rem;
+    margin-top: 10px;
+    font-size: 5rem;
 }
 
 .errorDisplay{
     font-size: 2.5rem;
     font-weight: bold;
+    color: red;
 }
